fix test
Signed-off-by: Bas Huisman <bhuism@odee.net>